--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,3 @@
-@import "bootstrap/scss/bootstrap";
-@import "firebaseui/dist/firebaseui";
-
 body {
   overflow-x: hidden;
 }
@@ -10,8 +7,8 @@ body {
   top: 0;
   left: 0;
   height: 100vh;
-  background: $gray-400;
-  @include transition(transform 1s);
+  background: #ced4da;
+  transition: transform 1s;
 }
 
 .notes {
@@ -29,11 +26,11 @@ body {
 .dashboard {
   height: 100vh;
   overflow-y: scroll;
-  background: $gray-100;
+  background: #f8f9fa;
 }
 
 .dashboard-buttons {
-  background: $gray-200;
+  background: #e9ecef;
 }
 
 .ui {
@@ -41,7 +38,7 @@ body {
   z-index: 1000;
   width: 100vw;
   min-height: 100vh;
-  background: $gray-700;
+  background: #495057;
 }
 
 .note-body {
@@ -50,10 +47,10 @@ body {
 }
 
 .tags > .tag {
-  @include border-top-left-radius(0);
-  @include border-bottom-left-radius(0);
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
 }
 
 .preload * {
-  @include transition(none);
+  transition: none;
 }
