--- a/src/index.scss
+++ b/src/index.scss
@@ -4,13 +4,22 @@ body {
   overflow-x: hidden;
 }
 
+@keyframes slide-in {
+  0% {
+    transform: translate(100%);
+  }
+  100% {
+    transform: translate(0);
+  }
+}
+
 .note {
   position: absolute;
   top: 0;
   left: 0;
   height: 100vh;
   background: $gray-400;
-  transition: transform 1s;
+  animation: slide-in 1s ease;
 }
 
 .notes {
@@ -19,10 +28,6 @@ body {
 
 .note-text {
   overflow-y: scroll;
-}
-
-.hidden {
-  transform: translate(100%);
 }
 
 .dashboard {
