--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,18 @@
-@import "~bootstrap/scss/bootstrap";
+@import "~bootstrap/scss/functions";
+@import "~bootstrap/scss/variables";
+@import "~bootstrap/scss/mixins";
+@import "~bootstrap/scss/root";
+@import "~bootstrap/scss/reboot";
+@import "~bootstrap/scss/type";
+@import "~bootstrap/scss/grid";
+@import "~bootstrap/scss/forms";
+@import "~bootstrap/scss/buttons";
+@import "~bootstrap/scss/input-group";
+@import "~bootstrap/scss/nav";
+@import "~bootstrap/scss/navbar";
+@import "~bootstrap/scss/card";
+@import "~bootstrap/scss/utilities";
+@import "~bootstrap/scss/print";
 
 body {
   overflow-x: hidden;
@@ -24,6 +38,7 @@ body {
 
 .notes {
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .note-text {
